# Requirements Update (requirements will need to be reinstalled)

# New Features
Added new collection_order `custom.desc`. ([FR](https://features.metamanager.wiki/features/p/reverse-sort-collectionorder-custom))

# Bug Fixes
Fixed Italian Translation 